// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header rendering 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    banner="testing"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          <mockConstructor
            to="/"
          >
            Regexper
          </mockConstructor>
        </h1>,
        <ul
          className="list"
        >
          <li>
            <a
              href="https://gitlab.com/javallone/regexper-static"
              rel="external noopener noreferrer"
              target="_blank"
            >
              <Gitlab
                color="currentColor"
                size="24"
              />
              <WithMergedOptions(TransComponent)>
                Source on GitLab
              </WithMergedOptions(TransComponent)>
            </a>
          </li>
          <li>
            <mockConstructor
              to="/privacy"
            >
              <WithMergedOptions(TransComponent)>
                Privacy Policy
              </WithMergedOptions(TransComponent)>
            </mockConstructor>
          </li>
          <li>
            <LoadNamespace(LocaleSwitcher) />
          </li>
        </ul>,
      ],
      "className": "header",
      "data-banner": "testing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <mockConstructor
            to="/"
          >
            Regexper
          </mockConstructor>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Regexper",
            "to": "/",
          },
          "ref": null,
          "rendered": "Regexper",
          "type": [MockFunction],
        },
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                <WithMergedOptions(TransComponent)>
                  Source on GitLab
                </WithMergedOptions(TransComponent)>
              </a>
            </li>,
            <li>
              <mockConstructor
                to="/privacy"
              >
                <WithMergedOptions(TransComponent)>
                  Privacy Policy
                </WithMergedOptions(TransComponent)>
              </mockConstructor>
            </li>,
            <li>
              <LoadNamespace(LocaleSwitcher) />
            </li>,
          ],
          "className": "list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                <WithMergedOptions(TransComponent)>
                  Source on GitLab
                </WithMergedOptions(TransComponent)>
              </a>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />,
                  <WithMergedOptions(TransComponent)>
                    Source on GitLab
                  </WithMergedOptions(TransComponent)>,
                ],
                "href": "https://gitlab.com/javallone/regexper-static",
                "rel": "external noopener noreferrer",
                "target": "_blank",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "currentColor",
                    "size": "24",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Source on GitLab",
                  },
                  "ref": null,
                  "rendered": "Source on GitLab",
                  "type": [Function],
                },
              ],
              "type": "a",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <mockConstructor
                to="/privacy"
              >
                <WithMergedOptions(TransComponent)>
                  Privacy Policy
                </WithMergedOptions(TransComponent)>
              </mockConstructor>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <WithMergedOptions(TransComponent)>
                  Privacy Policy
                </WithMergedOptions(TransComponent)>,
                "to": "/privacy",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Privacy Policy",
                },
                "ref": null,
                "rendered": "Privacy Policy",
                "type": [Function],
              },
              "type": [MockFunction],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <LoadNamespace(LocaleSwitcher) />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            <mockConstructor
              to="/"
            >
              Regexper
            </mockConstructor>
          </h1>,
          <ul
            className="list"
          >
            <li>
              <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                <WithMergedOptions(TransComponent)>
                  Source on GitLab
                </WithMergedOptions(TransComponent)>
              </a>
            </li>
            <li>
              <mockConstructor
                to="/privacy"
              >
                <WithMergedOptions(TransComponent)>
                  Privacy Policy
                </WithMergedOptions(TransComponent)>
              </mockConstructor>
            </li>
            <li>
              <LoadNamespace(LocaleSwitcher) />
            </li>
          </ul>,
        ],
        "className": "header",
        "data-banner": "testing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <mockConstructor
              to="/"
            >
              Regexper
            </mockConstructor>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Regexper",
              "to": "/",
            },
            "ref": null,
            "rendered": "Regexper",
            "type": [MockFunction],
          },
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <a
                  href="https://gitlab.com/javallone/regexper-static"
                  rel="external noopener noreferrer"
                  target="_blank"
                >
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />
                  <WithMergedOptions(TransComponent)>
                    Source on GitLab
                  </WithMergedOptions(TransComponent)>
                </a>
              </li>,
              <li>
                <mockConstructor
                  to="/privacy"
                >
                  <WithMergedOptions(TransComponent)>
                    Privacy Policy
                  </WithMergedOptions(TransComponent)>
                </mockConstructor>
              </li>,
              <li>
                <LoadNamespace(LocaleSwitcher) />
              </li>,
            ],
            "className": "list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="https://gitlab.com/javallone/regexper-static"
                  rel="external noopener noreferrer"
                  target="_blank"
                >
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />
                  <WithMergedOptions(TransComponent)>
                    Source on GitLab
                  </WithMergedOptions(TransComponent)>
                </a>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Gitlab
                      color="currentColor"
                      size="24"
                    />,
                    <WithMergedOptions(TransComponent)>
                      Source on GitLab
                    </WithMergedOptions(TransComponent)>,
                  ],
                  "href": "https://gitlab.com/javallone/regexper-static",
                  "rel": "external noopener noreferrer",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "currentColor",
                      "size": "24",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Source on GitLab",
                    },
                    "ref": null,
                    "rendered": "Source on GitLab",
                    "type": [Function],
                  },
                ],
                "type": "a",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <mockConstructor
                  to="/privacy"
                >
                  <WithMergedOptions(TransComponent)>
                    Privacy Policy
                  </WithMergedOptions(TransComponent)>
                </mockConstructor>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <WithMergedOptions(TransComponent)>
                    Privacy Policy
                  </WithMergedOptions(TransComponent)>,
                  "to": "/privacy",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Privacy Policy",
                  },
                  "ref": null,
                  "rendered": "Privacy Policy",
                  "type": [Function],
                },
                "type": [MockFunction],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <LoadNamespace(LocaleSwitcher) />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Header rendering with no banner 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    banner={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          <mockConstructor
            to="/"
          >
            Regexper
          </mockConstructor>
        </h1>,
        <ul
          className="list"
        >
          <li>
            <a
              href="https://gitlab.com/javallone/regexper-static"
              rel="external noopener noreferrer"
              target="_blank"
            >
              <Gitlab
                color="currentColor"
                size="24"
              />
              <WithMergedOptions(TransComponent)>
                Source on GitLab
              </WithMergedOptions(TransComponent)>
            </a>
          </li>
          <li>
            <mockConstructor
              to="/privacy"
            >
              <WithMergedOptions(TransComponent)>
                Privacy Policy
              </WithMergedOptions(TransComponent)>
            </mockConstructor>
          </li>
          <li>
            <LoadNamespace(LocaleSwitcher) />
          </li>
        </ul>,
      ],
      "className": "header",
      "data-banner": null,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <mockConstructor
            to="/"
          >
            Regexper
          </mockConstructor>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Regexper",
            "to": "/",
          },
          "ref": null,
          "rendered": "Regexper",
          "type": [MockFunction],
        },
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                <WithMergedOptions(TransComponent)>
                  Source on GitLab
                </WithMergedOptions(TransComponent)>
              </a>
            </li>,
            <li>
              <mockConstructor
                to="/privacy"
              >
                <WithMergedOptions(TransComponent)>
                  Privacy Policy
                </WithMergedOptions(TransComponent)>
              </mockConstructor>
            </li>,
            <li>
              <LoadNamespace(LocaleSwitcher) />
            </li>,
          ],
          "className": "list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                <WithMergedOptions(TransComponent)>
                  Source on GitLab
                </WithMergedOptions(TransComponent)>
              </a>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />,
                  <WithMergedOptions(TransComponent)>
                    Source on GitLab
                  </WithMergedOptions(TransComponent)>,
                ],
                "href": "https://gitlab.com/javallone/regexper-static",
                "rel": "external noopener noreferrer",
                "target": "_blank",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "currentColor",
                    "size": "24",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Source on GitLab",
                  },
                  "ref": null,
                  "rendered": "Source on GitLab",
                  "type": [Function],
                },
              ],
              "type": "a",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <mockConstructor
                to="/privacy"
              >
                <WithMergedOptions(TransComponent)>
                  Privacy Policy
                </WithMergedOptions(TransComponent)>
              </mockConstructor>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <WithMergedOptions(TransComponent)>
                  Privacy Policy
                </WithMergedOptions(TransComponent)>,
                "to": "/privacy",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Privacy Policy",
                },
                "ref": null,
                "rendered": "Privacy Policy",
                "type": [Function],
              },
              "type": [MockFunction],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <LoadNamespace(LocaleSwitcher) />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            <mockConstructor
              to="/"
            >
              Regexper
            </mockConstructor>
          </h1>,
          <ul
            className="list"
          >
            <li>
              <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                <WithMergedOptions(TransComponent)>
                  Source on GitLab
                </WithMergedOptions(TransComponent)>
              </a>
            </li>
            <li>
              <mockConstructor
                to="/privacy"
              >
                <WithMergedOptions(TransComponent)>
                  Privacy Policy
                </WithMergedOptions(TransComponent)>
              </mockConstructor>
            </li>
            <li>
              <LoadNamespace(LocaleSwitcher) />
            </li>
          </ul>,
        ],
        "className": "header",
        "data-banner": null,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <mockConstructor
              to="/"
            >
              Regexper
            </mockConstructor>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Regexper",
              "to": "/",
            },
            "ref": null,
            "rendered": "Regexper",
            "type": [MockFunction],
          },
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <a
                  href="https://gitlab.com/javallone/regexper-static"
                  rel="external noopener noreferrer"
                  target="_blank"
                >
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />
                  <WithMergedOptions(TransComponent)>
                    Source on GitLab
                  </WithMergedOptions(TransComponent)>
                </a>
              </li>,
              <li>
                <mockConstructor
                  to="/privacy"
                >
                  <WithMergedOptions(TransComponent)>
                    Privacy Policy
                  </WithMergedOptions(TransComponent)>
                </mockConstructor>
              </li>,
              <li>
                <LoadNamespace(LocaleSwitcher) />
              </li>,
            ],
            "className": "list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="https://gitlab.com/javallone/regexper-static"
                  rel="external noopener noreferrer"
                  target="_blank"
                >
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />
                  <WithMergedOptions(TransComponent)>
                    Source on GitLab
                  </WithMergedOptions(TransComponent)>
                </a>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Gitlab
                      color="currentColor"
                      size="24"
                    />,
                    <WithMergedOptions(TransComponent)>
                      Source on GitLab
                    </WithMergedOptions(TransComponent)>,
                  ],
                  "href": "https://gitlab.com/javallone/regexper-static",
                  "rel": "external noopener noreferrer",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "currentColor",
                      "size": "24",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Source on GitLab",
                    },
                    "ref": null,
                    "rendered": "Source on GitLab",
                    "type": [Function],
                  },
                ],
                "type": "a",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <mockConstructor
                  to="/privacy"
                >
                  <WithMergedOptions(TransComponent)>
                    Privacy Policy
                  </WithMergedOptions(TransComponent)>
                </mockConstructor>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <WithMergedOptions(TransComponent)>
                    Privacy Policy
                  </WithMergedOptions(TransComponent)>,
                  "to": "/privacy",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Privacy Policy",
                  },
                  "ref": null,
                  "rendered": "Privacy Policy",
                  "type": [Function],
                },
                "type": [MockFunction],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <LoadNamespace(LocaleSwitcher) />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
